# StockEarningsAnalyzer

./: .gitignore  README.md
api/: .env.example  README.md  pyproject.toml  run-api.sh
api/alembic/: env.py
api/alembic/versions/: 8a66d3e23c2c_initial.py
api/app/: __init__.py  config.py  db.py  ingest.py  main.py  models.py  normalize.py  repository.py  schemas.py
api/app/routers/: admin.py  companies.py
api/tests/: test_normalize.py  test_repository.py
web/: package-lock.json  setup.sh
web/app/: layout.tsx  page.tsx
web/app/components/: EarningsDashboard.tsx
web/lib/: api.ts  types.ts
