[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "stock-earnings-api"
version = "0.1.0"
description = "FastAPI backend for Stock Earnings Analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
  "yfinance>=0.2.50",
  "pandas>=2.2.0",
  "lxml>=5.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.28.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
